--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 authors = ["Kasper Seweryn <github@wvffle.net>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+dirs = "2.0.2"
+serde-hjson = "0.9.1"
+rust-embed = "5.2.0"
+serde = { version = "1.0.104", features = ["derive"] }
+
+# Github deps
 gtk-layer-shell-rs = { git = "https://github.com/subgraph/gtk-layer-shell-rs" }
 gtk = { git = "https://github.com/gtk-rs/gtk.git" }
 gdk = { git = "https://github.com/gtk-rs/gdk.git" }
